--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -2,7 +2,7 @@
 
 <h2>Questionnarie Form</h2>
 <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
-  <%= link_to l(:label_rqre_new), edit_project_rqre_questionnaire_path(@project, @rqre_questionnaire), :class => 'icon icon-add' %>
+  <%= link_to l(:label_rqre_edit), edit_project_rqre_questionnaire_path(@project, @rqre_questionnaire), :class => 'icon icon-edit' %>
 <% end %>
 
 
@@ -15,14 +15,20 @@
     <p><%= label_tag('rqre_questionnaires[end]', l(:label_rqre_end)) %><%= @rqre_questionnaire['end'].to_date %></p>
   </div>
 
+  <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+    <%= link_to l(:label_rqre_edit), new_project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire), :class => 'icon icon-add' %> aaa
+  <% end %>
 
   <% @rqre_questions.each do |q| %>
     <div class="box tabular">
       <%= hidden_field_tag('rqre_questions[id]', q['id']) %>id=<%= q.id %>  dtype=<%= q.dtype %>
       <p><%= q.title %></p>
-      <% case q.dtype when 1 %> out1
-          <% when 2 %> "out2"
-          <% else %> "out_else"
+      <% case q.dtype when 1 %> out1<br>
+          <% when 2 %> "out2"<br>
+          <% else %> "out_else"<br>
+      <% end %>
+      <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+        <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
       <% end %>
     </div>
   <% end %>
