--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -21,15 +21,25 @@
 
   <% @rqre_questions.each do |q| %>
     <div class="box tabular">
-      <%= hidden_field_tag('rqre_questions[id]', q['id']) %>id=<%= q.id %>  dtype=<%= q.dtype %>
-      <p><%= q.title %></p>
-      <% case q.dtype when 1 %> out1<br>
-          <% when 2 %> "out2"<br>
-          <% else %> "out_else"<br>
+      <%= q.title %>     
+        <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+          <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
+        <% end %>
+        <br>
+
+      <%= form_tag(:controller => 'rqre_votes', :action => :vote, :remote => true) do %>
+        <%= hidden_field_tag('rqre_vote[question_id]', q['id']) %>id=<%= q.id %>  dtype=<%= q.dtype %><br>
+        <% case q.dtype when 1 %> out1<br>
+        <% when 10 %>out10<br>
+          <%= radio_button_tag('rqre_vote[answer]', "null") %>null 
+          <% for i in 1..10 do %><%= radio_button_tag('rqre_vote[answer]', i) %><%= i %> <% end %>
+        <% else %> "out_else"<br>
+        <% end %>
+      <%= submit_tag l(:button_save) %>
       <% end %>
-      <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
-        <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
-      <% end %>
+      <br>
+
+      
     </div>
   <% end %>
 
