questionのソート機能を実装
ソートは、入力されるタイトルの始まりに識別用のキーがつく前提で、テキストでソート、Q1. xxxなど

--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -44,4 +44,5 @@
   <% end %>
 
 
+  <%= link_to l(:label_rqre_voting),  controller: "rqre_votes", action: "index", id:  @rqre_questionnaire, :method => :get %>
 </div>
