--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -15,34 +15,22 @@
     <p><%= label_tag('rqre_questionnaires[end]', l(:label_rqre_end)) %><%= @rqre_questionnaire['end'].to_date %></p>
   </div>
 
-  <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
-    <%= link_to l(:label_rqre_edit), new_project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire), :class => 'icon icon-add' %> aaa
-  <% end %>
-
-  <% @rqre_questions.each do |q| %>
-    <div class="box tabular">
-      <%= q.title %>     
+  <%= form_for @rqre_questionnaire, url: url_for(action: :vote) do |f| %>
+    <%= hidden_field_tag('project_id', @rqre_questionnaire['project_id']) %>
+    <% @rqre_questionnaire.rqre_questions.sort_by{|q| q.title}.each do |q| %>
+      <%= f.fields_for q do |f| %>
+        <div class="box tabular">
+        <%= q.title %>
         <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
           <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
+          <br>
         <% end %>
-        <br>
-
-      <%= form_tag(:controller => 'rqre_votes', :action => :vote, :remote => true) do %>
-        <%= hidden_field_tag('rqre_vote[question_id]', q['id']) %>id=<%= q.id %>  dtype=<%= q.dtype %><br>
-        <% case q.dtype when 1 %> out1<br>
-        <% when 10 %>out10<br>
-          <%= radio_button_tag('rqre_vote[answer]', "null") %>null 
-          <% for i in 1..10 do %><%= radio_button_tag('rqre_vote[answer]', i) %><%= i %> <% end %>
-        <% else %> "out_else"<br>
-        <% end %>
-      <%= submit_tag l(:button_save) %>
+        <%= radio_button_tag('rqre_question' + q.id.to_s, "null") %>null 
+        <% for i in 1..10 do %><%= radio_button_tag('rqre_question' + q.id.to_s, i) %><%= i %> <% end %>
+        </div>
       <% end %>
-      <br>
-
-      
-    </div>
+    <% end %>
+    <%= f.submit %>
   <% end %>
 
-
-  <%= link_to l(:label_rqre_voting),  controller: "rqre_votes", action: "index", id:  @rqre_questionnaire, :method => :get %>
 </div>
