--- a/app/views/rqre_questionnaires/vote.html.erb
+++ b/app/views/rqre_questionnaires/vote.html.erb
@@ -1,11 +1,9 @@
-<div class='rqre_question'>
-
 <h2>Vote confirm</h2>
   <div class="box tabular">
 
   <% @rqre_questions.each do |q|%>
     <% @rqre_votes.each do |v| %>
-        <% if q.id == v.question_id %>
+        <% if q.id == v.rqre_question_id %>
           <p>question_id <%= q.id %> <%= q.title %> :  <%= v.answer %></p>
         <% end %>
     <% end %>
@@ -13,10 +11,6 @@
   </div>
 
 
-  <%= form_tag(:controller => 'rqre_votes', :action => :vote_fix) do %>
+  <%= form_tag(:controller => 'rqre_votes', :action => :vote_freeze) do %>
   <%= submit_tag l(:button_save) %>
   <% end %> 
-
-  
-
-</div>
