--- a/app/views/rqre_questionnaires/edit.html.erb
+++ b/app/views/rqre_questionnaires/edit.html.erb
@@ -13,4 +13,24 @@
     <%= submit_tag l(:button_save) %>
   </div>
   <% end %>
+  
+    <%= hidden_field_tag('project_id', @rqre_questionnaire['project_id']) %>
+    <% @rqre_questionnaire.rqre_questions.sort_by{|q| q.title}.each do |q| %>
+      
+        <div class="box tabular">
+        <%= q.title %>
+        <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+          <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
+          <br>
+        <% end %>
+        <%= radio_button_tag('rqre_question' + q.id.to_s, "null") %>null 
+        <% for i in 1..10 do %><%= radio_button_tag('rqre_question' + q.id.to_s, i) %><%= i %> <% end %>
+        </div>
+      
+    <% end %>
+  
+  <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+    <%= link_to l(:label_rqre_edit), new_project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire), :class => 'icon icon-add' %> aaa
+  <% end %>
+
 </div>
