--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -20,11 +20,7 @@
     <% @rqre_questionnaire.rqre_questions.sort_by{|q| q.title}.each do |q| %>
       <%= f.fields_for q do |f| %>
         <div class="box tabular">
-        <%= q.title %>
-        <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
-          <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
-          <br>
-        <% end %>
+        <%= q.title %><br>
         <%= radio_button_tag('rqre_question' + q.id.to_s, "null") %>null 
         <% for i in 1..10 do %><%= radio_button_tag('rqre_question' + q.id.to_s, i) %><%= i %> <% end %>
         </div>
