--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -32,13 +32,7 @@
     <p><%= label_tag('rqre_questionnaires[end]', l(:label_rqre_end)) %><%= @rqre_questionnaire['end'].to_date %></p>
   </div>
 
-  <%= form_with url: vote_project_rqre_questionnaire_path(@project.id, @rqre_questionnaire.id) do |f| %>
-    <%= hidden_field_tag(:rqre_index, '0') %>
-    <%= f.submit l(:label_rqre_vote) %>
-  <% end %>
-  <br>
-  <%= @rqre_votes.to_a %>
-  <br>
+
   
 
     <% @rqre_questions.each do |q| %>
@@ -53,13 +47,21 @@
         <%= q.title %>
         <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
           <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
-          <br>
         <% end %>
-        <%= radio_button_tag('answer', "null", false) %>null 　 
-        <% for i in 1..10 do %>
-          <% if i == vote.to_i %><%= radio_button_tag('answer', i, true) %><%= i %> 　 
-          <% else %><%= radio_button_tag('answer', i, false) %><%= i %> 　 
+        <br>
+
+        <% if q.dtype == "10" %>
+          <%= radio_button_tag('answer', "null", false) %>null 　 
+          <% for i in 1..10 do %>
+            <% if i == vote.to_i %><%= radio_button_tag('answer', i, true) %><%= i %> 　 
+            <% else %><%= radio_button_tag('answer', i, false) %><%= i %> 　 
+            <% end %>
           <% end %>
+        <% elsif q.dtype == "text" %>
+          <% vote = "" if vote == 0 %>
+          <%= text_field_tag 'answer', vote, :size => 200, :maxlength => 400 %>
+        <% elsif %>
+          error
         <% end %>
       <% end %>       
       </div>
