--- a/app/views/rqre_questions/show.html.erb
+++ b/app/views/rqre_questions/show.html.erb
@@ -5,7 +5,7 @@
   <div class="box tabular">
     <%= hidden_field_tag('rqre_question[rqre_questionnaire_id]', @rqre_question['questionnaire_id']) %>
     <p><%= label_tag('rqre_question[title]', l(:label_rqre_title)) %><%= text_field_tag('rqre_question[title]', @rqre_question['title']) %></p>
-    <p><%= label_tag('rqre_question[dtype]', l(:label_rqre_dtype)) %><%= text_field_tag('rqre_question[dtype]', @rqre_question['dtype']) %></p>
+    <p><%= label_tag('rqre_question[dtype]', l(:label_rqre_dtype)) %><%= select_tag('rqre_question[dtype]', options_for_select(["10","5","checkbox","select","text"], @rqre_question['dtype'])) %></p>
     <p><%= label_tag('rqre_question[content]', l(:label_rqre_content)) %><%= text_area_tag('rqre_question[content]', @rqre_question['content']) %></p>
     <p><%= label_tag('rqre_question[option]', l(:label_rqre_option)) %><%= text_area_tag('rqre_question[option]', @rqre_question['option']) %></p>
     <%= submit_tag l(:button_save) %>
