--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -68,6 +68,9 @@
           <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
         <% end %>
         <br>
+        <div class="wiki">
+          <%= textilizable q.content %>
+        </div>
 
         <% if q.dtype == "10" %>
           <%= radio_button_tag('answer', "null", false) %>null 　 
