--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -30,26 +30,38 @@
   });
 </script>
 
-<div class='rqre_questionnarie'>
+
+<% content_for :header_tags do %>
+  <%= stylesheet_link_tag "rqre_questionnaire.css", plugin: "redmine_questionnaire_plugin" %>
+<% end %>
+
+<div class='rqre'>
 
 <h2>Questionnarie Form</h2>
 
+  <div class="box rqre abstract">
+    <div class="wrapper">
+      <div class="right">
+        <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+        <%= link_to l(:label_rqre_edit), edit_project_rqre_questionnaire_path(@project, @rqre_questionnaire), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), project_rqre_questionnaire_path(@project, @rqre_questionnaire), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
+        <% end %>
+      </div>
+      <h2><u><%= @rqre_questionnaire['title'] %></u></h2>
+    </div>
 
+    <div class="wrapper">
+      <div class="right">
+        <p><%= label_tag('rqre_questionnaires[revote]', l(:label_rqre_revote)) %><%= @rqre_questionnaire['revote'] %></p>
+        <p><%= label_tag('rqre_questionnaires[end]', l(:label_rqre_end)) %><%= @rqre_questionnaire['end'].to_date %></p>
+      </div>
+      
+      <div class="wiki"><%= textilizable @rqre_questionnaire['description'] %></div>
+    </div>
 
-  <div class="box tabular">
-    <%= hidden_field_tag('rqre_questionnaires[project_id]', @rqre_questionnaire['project_id']) %>
-    <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
-      <%= link_to l(:label_rqre_edit), edit_project_rqre_questionnaire_path(@project, @rqre_questionnaire), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), project_rqre_questionnaire_path(@project, @rqre_questionnaire), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
-    <% end %>
-    <p><%= label_tag('rqre_questionnaires[title]', l(:label_rqre_title)) %><%= @rqre_questionnaire['title'] %></p>
-    <p><%= label_tag('rqre_questionnaires[note]', l(:label_rqre_note)) %><%= @rqre_questionnaire['note'] %></p>
-    <p><%= label_tag('rqre_questionnaires[description]', l(:label_rqre_description)) %><%= @rqre_questionnaire['description'] %></p>
-    <p><%= label_tag('rqre_questionnaires[revote]', l(:label_rqre_revote)) %><%= @rqre_questionnaire['revote'] %></p>
-    <p><%= label_tag('rqre_questionnaires[end]', l(:label_rqre_end)) %><%= @rqre_questionnaire['end'].to_date %></p>
+    <div class="wrapper">
+      <%= hidden_field_tag('rqre_questionnaires[project_id]', @rqre_questionnaire['project_id']) %>
+    </div>
   </div>
-
-
-  
 
     <% @rqre_questions.each do |q| %>
       <% vote = 0 %>
@@ -59,19 +71,20 @@
           <hr>
         <% end %>
 
-      <div class="box tabular">
+      <div class="box rqre question">
       <%= form_with url: vote_project_rqre_questionnaire_path(@project.id, @rqre_questionnaire.id), local: false do |f| %>
-         <%= hidden_field_tag(:rqre_questionnaire_id, @rqre_questionnaire.id) %>
+        <%= hidden_field_tag(:rqre_questionnaire_id, @rqre_questionnaire.id) %>
         <%= hidden_field_tag(:rqre_question_id, q.id) %>
-        <%= q.title %>
-        <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+        <div class="right">
+          <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
           <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
-        <% end %>
-        <br>
-        <div class="wiki">
-          <%= textilizable q.content %>
+          <% end %>
         </div>
+        <h2><%= q.title %></h2>
+        
+        <div class="wiki"><%= textilizable q.content %></div>
 
+        <div class="qform">
         <% if q.dtype == "10" %>
           <%= radio_button_tag('answer', "null", false) %>null 　 
           <% for i in 1..10 do %>
@@ -88,7 +101,7 @@
           <% end %>
         <% elsif q.dtype == "text" %>
           <% vote = "" if vote == 0 %>
-          <%= text_field_tag 'answer', vote, :size => 200, :maxlength => 400 %>
+          <%= text_field_tag 'answer', vote, :size => 120, :maxlength => 400 %>
         <% elsif q.dtype == "select" %>
           <% option = q.option%>
           <%= radio_button_tag('answer', "null", false) %>null<br>
@@ -123,15 +136,19 @@
         <% elsif %>
           error
         <% end %>
-      <% end %>       
+        </div>
+      <% end %>
       </div>
     <% end %>
 
-  <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
-    <%= link_to l(:label_rqre_edit), new_project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire), :class => 'icon icon-add' %> add
-    <br>
-  <% end %>
-  
-  <%= link_to l(:label_rqre_vote), confirm_project_rqre_questionnaire_path(@project.id, @rqre_questionnaire.id) %>
+  <div class="wrapper">
+    <div class="right">
+      <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+      <%= link_to l(:label_rqre_edit), new_project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire), :class => 'icon icon-add' %> add
+      <% end %>
+    </div>
+
+    <%= link_to l(:label_rqre_vote), confirm_project_rqre_questionnaire_path(@project.id, @rqre_questionnaire.id) %>
+  </div>
   
 </div>
