--- a/app/views/rqre_questions/new.html.erb
+++ b/app/views/rqre_questions/new.html.erb
@@ -8,7 +8,7 @@
     <p><%= label_tag('rqre_question[dtype]', l(:label_rqre_dtype)) %><%= select_tag('rqre_question[dtype]', options_for_select(["","10","5","checkbox","select","text","separator"], @rqre_question['dtype'])) %></p>
     <p>
       <%= label_tag('rqre_question[content]', l(:label_rqre_content)) %>
-      <%= text_area_tag('rqre_question[content]', @rqre_question['content'], size: '40x3', class: 'wiki-edit', required: true) %><br>
+      <%= text_area_tag('rqre_question[content]', @rqre_question['content'], size: '40x3', class: 'wiki-edit') %><br>
       <%= wikitoolbar_for "rqre_question_content" %>
     </p>
     <p><%= label_tag('rqre_question[option]', l(:label_rqre_option)) %><%= text_area_tag('rqre_question[option]', @rqre_question['option']) %></p>
