--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -6,6 +6,7 @@
 <div class='rqre'>
 
 <h2>Questionnarie Form</h2>
+  <%= text_field_tag 'autofocus' %>
 
   <div class="box rqre abstract">
     <div class="wrapper">
