--- a/assets/stylesheets/rqre_questionnaire.css
+++ b/assets/stylesheets/rqre_questionnaire.css
@@ -34,6 +34,10 @@
     padding-left: 40px;
 }
 
+.rqre #autofocus {
+    display: none;
+}
+
 /* modal form */
 .rqre_saveModal { display: none; }
 
