--- a/app/views/rqre_questionnaires/edit.html.erb
+++ b/app/views/rqre_questionnaires/edit.html.erb
@@ -14,6 +14,9 @@
     </p>
     <p><%= label_tag('rqre_questionnaires[revote]', l(:label_rqre_revote)) %><%= select_tag('rqre_questionnaires[revote]', options_for_select([['enable', true],['disable', false]], @rqre_questionnaire['revote'])) %></p>
     <p><%= label_tag('rqre_questionnaires[end]', l(:label_rqre_end)) %><%= date_field_tag('rqre_questionnaires[end]', @rqre_questionnaire['end'].to_date, :size => 10) %><%= calendar_for('rqre_questionnaires[end]') %></p>
+    <div>
+    <p><label><%=l(:label_attachment_add)%></label><%= render :partial => 'attachments/form' %></p>
+    </div>
     <%= submit_tag l(:button_save) %>
   </div>
   <% end %>
@@ -23,8 +26,8 @@
       
         <div class="box tabular">
         <%= q.title %>
-        <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
-          <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
+        <% if User.current.allowed_to?(:edit_rqre_questionnaires, @project) %>
+          <%= link_to l(:label_rqre_edit), edit_project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire, q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire, q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
           <br>
         <% end %>
         <%= radio_button_tag('rqre_question' + q.id.to_s, "null") %>null 
