--- a/app/views/rqre_questionnaires/show.html.erb
+++ b/app/views/rqre_questionnaires/show.html.erb
@@ -11,7 +11,7 @@
   <div class="box rqre abstract">
     <div class="wrapper">
       <div class="right">
-        <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+        <% if User.current.allowed_to?(:edit_rqre_questionnaires, @project) %>
         <%= link_to l(:label_rqre_edit), edit_project_rqre_questionnaire_path(@project, @rqre_questionnaire), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), project_rqre_questionnaire_path(@project, @rqre_questionnaire), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
         <% end %>
       </div>
@@ -24,7 +24,7 @@
         <p><%= label_tag('rqre_questionnaires[end]', l(:label_rqre_end)) %><span id="rqre_end"><%= @rqre_questionnaire['end'].to_date %></span></p>
       </div>
       
-      <div class="wiki"><%= textilizable @rqre_questionnaire['description'] %></div>
+      <div class="wiki"><%= textilizable @rqre_questionnaire['description'], :attachments => @rqre_questionnaire.attachments %></div>
     </div>
 
     <div class="wrapper">
@@ -45,13 +45,13 @@
         <%= hidden_field_tag(:rqre_questionnaire_id, @rqre_questionnaire.id) %>
         <%= hidden_field_tag(:rqre_question_id, q.id) %>
         <div class="right">
-          <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
-          <%= link_to l(:label_rqre_edit), rqre_question_path(q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), rqre_question_path(q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
+          <% if User.current.allowed_to?(:edit_rqre_questionnaires, @project) %>
+          <%= link_to l(:label_rqre_edit), edit_project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire, q), :class => 'icon icon-edit' %>  <%= link_to l(:label_rqre_delete), project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire, q), :method => :delete, data: {confirm: l(:label_rqre_delete_message)},  :class => 'icon icon-delete' %>
           <% end %>
         </div>
         <h2><%= q.title %></h2>
         
-        <div class="wiki"><%= textilizable q.content %></div>
+        <div class="wiki"><%= textilizable q.content, :attachments => q.attachments%></div>
 
         <div class="qform">
         <% if q.dtype == "10" %>
@@ -112,7 +112,7 @@
 
   <div class="wrapper">
     <div class="right">
-      <% if User.current.allowed_to?(:rqre_questionnaires_edit, @project) %>
+      <% if User.current.allowed_to?(:edit_rqre_questionnaires, @project) %>
       <%= link_to l(:label_rqre_edit), new_project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire), :class => 'icon icon-add' %> add
       <% end %>
     </div>
