--- a/app/views/rqre_questions/edit.html.erb
+++ b/app/views/rqre_questions/edit.html.erb
@@ -6,7 +6,7 @@
 <div class='rqre'>
 
 <h2>Question Form</h2>
-  <%= form_for @rqre_question, url: rqre_question_path(@rqre_question) do %>
+  <%= form_for @rqre_question, url: project_rqre_questionnaire_rqre_question_path(@project, @rqre_questionnaire, @rqre_question) do %>
   <div class="box tabular">
     <%= hidden_field_tag('rqre_question[rqre_questionnaire_id]', @rqre_question['questionnaire_id']) %>
     <p><%= label_tag('rqre_question[title]', l(:label_rqre_title)) %><%= text_field_tag('rqre_question[title]', @rqre_question['title']) %></p>
@@ -22,6 +22,9 @@
       <br>This field should be separated by a line break for each input, and the value and content should be separated by a colon ":"
       <br><u>Example.</u><br>1:Great<br>2:OK <br>3:Bad
     </p>
+    <div>
+    <p><label><%=l(:label_attachment_add)%></label><%= render :partial => 'attachments/form' %></p>
+    </div>
     <%= submit_tag l(:button_save), :id => 'rqre_btn' %>
   </div>
   <% end %>
