--- a/assets/stylesheets/rqre_questionnaire.css
+++ b/assets/stylesheets/rqre_questionnaire.css
@@ -34,12 +34,9 @@
     padding-left: 40px;
 }
 
-.rqre #autofocus {
-    display: none;
-}
-
-.rqre .non-display {
-    display: none;
+.rqre_result div.chart {
+    resize: both;
+    overflow: hidden;
 }
 
 .rqre textarea.err {
