--- a/app/views/rqre_questionnaires/result.html.erb
+++ b/app/views/rqre_questionnaires/result.html.erb
@@ -2,8 +2,8 @@
   <%= stylesheet_link_tag "mermaid.min.css", plugin: "redmine_questionnaire_plugin" %>
   <%= stylesheet_link_tag "rqre_questionnaire.css", plugin: "redmine_questionnaire_plugin" %>
   <%= include_gon %>
-  <%= javascript_include_tag "Chart.min.js", plugin: "redmine_questionnaire_plugin" %>
-  <%= javascript_include_tag "gridjs.umd.js", plugin: "redmine_questionnaire_plugin" %>
+  <%= javascript_include_tag "chart_min.js", plugin: "redmine_questionnaire_plugin" %>
+  <%= javascript_include_tag "gridjs_umd.js", plugin: "redmine_questionnaire_plugin" %>
 <% end %>
 
 <div class='rqre_result'>
